--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- CSS styling -->
   <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css">
   <!-- google fonts -->
@@ -57,189 +59,160 @@
     <div class="text">Jordynn Otto</div>
   </div>
 
-  <div class="container">
+  <!-- <div class="container"> -->
 
-    <!-- about me -->
-    <div id="about">
-      <h2 id="title">
-        About
-      </h2>
-      <hr>
-      <!-- bio -->
-      <div class="row">
-        <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
-        <p id="summary">
-          Hi, I am Jordynn, a full-stack web developer. I am a woman of passion who thrives off of new knowledge and
-          seeks to be successful in all aspects of life. Due to my background in arts, fitness, and communications my
-          talents and skills cover a myriad of categories; which marries front-end development eloquently. Exceling at
-          front-end UI, meshing colors, themes, and design, I am confident in bringing a new, fresh perspective to
-          application interface.
-        </p>
-      </div>
-      <!-- </div> -->
-      <!-- <div class="row"> -->
+  <!-- about me -->
+  <div id="about">
+    <h2 id="title">
+      About
+    </h2>
+    <hr>
+    <!-- bio -->
+    <div class="row">
       <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
-      <!-- <p id="summary">   -->
-      <!-- </p> -->
-      <!-- </div> -->
-      <!-- </div> -->
+      <p id="summary">
+        Hi, I am Jordynn, a full-stack web developer. I am a woman of passion who thrives off of new knowledge and
+        seeks to be successful in all aspects of life. Due to my background in arts, fitness, and communications my
+        talents and skills cover a myriad of categories; which marries front-end development eloquently. Exceling at
+        front-end UI, meshing colors, themes, and design, I am confident in bringing a new, fresh perspective to
+        application interface.
+      </p>
     </div>
+    <!-- </div> -->
+    <!-- <div class="row"> -->
+    <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
+    <!-- <p id="summary">   -->
+    <!-- </p> -->
+    <!-- </div> -->
+    <!-- </div> -->
+  </div>
 
-    <!-- web portfolio/skills -->
-    <div id="webPage">
-      <h2 id="title">
-        Web Portfolio
-      </h2>
-      <hr>
-      <!-- projects -->
-      <div class="cards">
-        <div class="card-deck">
-
-
-            <!-- <div class="w3-display-container w3-hover-opacity">
-                <img src="img_avatar.png" alt="Avatar">
-                <div class="w3-display-middle w3-display-hover">
-                  <button class="w3-button w3-black">John Doe</button>
-                </div>
-              </div -->
-
-          <div class="card">
+  <!-- web portfolio/skills -->
+  <div id="webPage">
+    <h2 id="title">
+      Web Portfolio
+    </h2>
+    <hr>
+    <!-- projects -->
+    <div class="row" id="projectcards">
+      <div class="col-6">
+        <div class="card" style="width: 100%">
+          <div class="zoom">
             <a href="https://buley004.github.io/ballads-and-brews/">
-              <img class="card-img-top" id="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png"
-                alt="Image of App">
+              <img class="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png" alt="Image of app">
             </a>
-            <div class="card text-center">
-              <div class="card-body">
-                <h5 class="card-title">Ballads and Brews</h5>
-                <p class="card-text">App populates concerts and restaurants near you NOW!</p>
-                <a href="https://github.com/buley004/ballads-and-brews" class="btn btn-primary"
-                  id="cardbutton">Github</a>
-              </div>
-            </div>
           </div>
-
-          <div class="card">
-            <a href="#">
-              <img class="card-img-top" id="card-img-top" src="#" alt="Image of Game">
-            </a>
-            <div class="card text-center">
-              <div class="card-body">
-                <h5 class="card-title">Project 2</h5>
-                <p class="card-text">Project 2 will go here when done.</p>
-                <a href="#" class="btn btn-primary" id="cardbutton">Github</a>
-              </div>
-            </div>
+          <div class="card-body">
+            <h5 class="card-title">Ballads and Brews</h5>
+            <p class="card-text">App populates concerts and restaurants near you NOW!</p>
+            <a href="https://github.com/buley004/ballads-and-brews" class="btn btn-primary" id="cardbutton">Github</a>
           </div>
-
         </div>
       </div>
+      <div class="col-6">
+        <div class="card" style="width: 100%">
+          <div class="zoom">
+            <img class="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png" alt="Image of app"></a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Divvy</h5>
+            <p class="card-text">Household bill splitting app.</p>
+            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
+          </div>
+        </div>
+      </div>
+      <!-- end of project card row -->
+    </div>
 
-      <!-- skills in cards -->
-      <h3 id="skills">
-        Skills
-      </h3>
+    <!-- skills in cards -->
+    <h3 id="skills">
+      Skills
+    </h3>
 
+    <center>
       <div class="row">
         <div class="col-md-4">
-          <i class="fa fa-html5" style="font-size:55px" id="contacticon"></i>
+          <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">HTML</p>
         </div>
 
         <div class="col-md-4">
-          <i class="fa fa-css3" style="font-size:55px" id="contacticon"></i>
+          <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">CSS</p>
         </div>
 
         <div class="col-md-4">
-          <i class="fa fa-css3" style="font-size:55px" id="contacticon"></i>
+          <i class='fas fa-dollar-sign' style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">jQuery</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-md-4">
-          <i class="fa fa-css3" style="font-size:55px" id="contacticon"></i>
+        <div class="col-md-6">
+          <i class='fas fa-stream' style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">mySQL</p>
         </div>
 
-        <div class="col-md-4">
-          <i class="fa fa-camera" style="font-size:55px" id="contacticon"></i>
+        <div class="col-md-6">
+          <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">Photoshop</p>
         </div>
-
       </div>
+    </center>
 
 
     <!-- end of web portfolio div -->
+  </div>
+
+  <!-- art portfolio -->
+  <div id="artPage">
+    <h2 id="title">
+      Art Portfolio
+    </h2>
+    <hr>
+
+    <!-- photos -->
+    <div class="row">
+      <div class="col-6">
+        <img src="images/Screen Shot 2019-06-11 at 9.44.16 PM.png" class="d-inline-block w-100"
+          alt="Image of Jordynn's modeling.">
+      </div>
+      <div class="col-6">
+        <img src="images/Screen Shot 2019-06-11 at 9.45.56 PM.png" class="d-inline-block w-100"
+          alt="Image of Jordynn's modeling.">
+      </div>
     </div>
 
-    <!-- art portfolio -->
-    <div id="artPage">
-      <h2 id="title">
-        Art Portfolio
-      </h2>
-      <hr>
-
-      <center>
-        <div class="grid">
-          <div class="element-item">
-            <img src="images/Screen Shot 2019-06-11 at 9.44.16 PM.png" class="d-inline-block w-100"
-              alt="Image of Jordynn's modeling.">
-          </div>
-
-          <div class="element-item">
-            <img src="images/Screen Shot 2019-06-11 at 9.45.56 PM.png" class="d-inline-block w-100"
-              alt="Image of Jordynn's modeling.">
-          </div>
-
-          <div class="element-item">
-            <img src="images/Screen Shot 2018-10-18 at 5.02.18 PM.png" class="d-inline-block w-100"
-              alt="Image of Jordynn's modeling.">
-          </div>
-
-          <div class="element-item">
-            <img src="images/Screen Shot 2018-08-29 at 2.58.28 PMedit.jpg" class="d-inline-block w-100"
-              alt="Image of Jordynn's modeling.">
-          </div>
-
-          <div class="element-item">
-            <img src="images/IMG_7895.JPG" class="d-inline-block w-100" alt="Image of Jordynn's modeling.">
-          </div>
-
-          <div class="element-item">
-            <img src="images/Screen Shot 2019-06-11 at 9.46.37 PM.png" class="d-inline-block w-100"
-              alt="Image of Jordynn's modeling.">
-          </div>
-
-          <div class="element-item">
-            <img src="images/Screen Shot 2019-06-11 at 9.47.15 PM.png" class="d-inline-block w-100"
-              alt="Image of Jordynn's modeling.">
-          </div>
-
-          <div class="element-item">
-          </div>
-        </div>
-
-        <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%"
-          id="youtube">
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-            style="position:absolute; top:0; left: 0"></iframe>
-        </div>
-
-        <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%"
-          id="youtube">
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/BRoeecMjRXY" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-            style="position:absolute; top:0; left: 0"></iframe>
-        </div>
+    <div class="row">
+      <div class="col-6">
+        <img src="images/Screen Shot 2019-06-11 at 9.47.15 PM.png" class="d-inline-block w-100"
+          alt="Image of Jordynn's modeling.">
+      </div>
+      <div class="col-6">
+        <img src="images/Screen Shot 2019-06-11 at 9.46.37 PM.png" class="d-inline-block w-100"
+          alt="Image of Jordynn's modeling.">
+      </div>
     </div>
-    </center>
+
+    <!-- youtube videos -->
+    <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%" id="youtube">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+        style="position:absolute; top:0; left: 0"></iframe>
+    </div>
+
+    <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%" id="youtube">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/BRoeecMjRXY" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+        style="position:absolute; top:0; left: 0"></iframe>
+    </div>
+
+
 
     <!-- contact page -->
     <div id="contactPage">
@@ -250,40 +223,40 @@
 
       <h5 class="contact">I would love to hear from you.</h4>
 
-      <div class="row">
-        <div class="col-md-6">
-          <i class="fa fa-phone" style="font-size:48px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">206-909-5153</p>
+        <div class="row">
+          <div class="col-md-6">
+            <i class="fa fa-phone" style="font-size:48px" id="contacticon"></i>
+            <br>
+            <p class="contacttext">206-909-5153</p>
+          </div>
+
+          <div class="col-md-6">
+            <i class="fa fa-envelope" style="font-size:48px" id="contacticon"></i>
+            <br>
+            <p class="contacttext">jordynn.otto@gmail.com</p>
+          </div>
         </div>
 
-        <div class="col-md-6">
-          <i class="fa fa-envelope" style="font-size:48px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">jordynn.otto@gmail.com</p>
-        </div>
-      </div>
 
+        <div class="row" id="row1">
+          <div class="col-md-4">
+            <i class='fab fa-linkedin' style="font-size:48px" id="contacticon"></i>
+            <br>
+            <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink">Linkedin</a>
+          </div>
 
-      <div class="row" id="row1">
-        <div class="col-md-4">
-            <i class="fa fa-linkedin-square" style="font-size:48px" id="contacticon"></i>
-          <br>
-          <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink">Linkedin</a>
-        </div>
+          <div class="col-md-4">
+            <i class='fab fa-github' style="font-size:48px" id="contacticon"></i>
+            <br>
+            <a href="https://github.com/jottobot" id="contactlink">Github</a>
+          </div>
 
-        <div class="col-md-4">
-            <i class="fa fa-github" style="font-size:48px" id="contacticon"></i>
-          <br>
-          <a href="https://github.com/jottobot" id="contactlink">Github</a>
+          <div class="col-md-4">
+            <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
+            <br>
+            <a href="assets/Jordynn Otto Resume.pdf" id="contactlink">Resume</a>
+          </div>
         </div>
-
-        <div class="col-md-4">
-          <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
-        <br>
-        <a href="assets/Jordynn Otto Resume.pdf" id="contactlink">Resume</a>
-        </div>
-      </div>
 
     </div>
 
@@ -292,8 +265,6 @@
 
     <!-- javascript -->
     <script src="assets/app.js"></script>
-    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 
     <!-- bootstrap js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -304,7 +275,7 @@
       crossorigin="anonymous"></script>
 
     <!-- container div -->
-  </div>
+    <!-- </div> -->
 
 </body>
 
