--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
       <p id="summary">
         Hi, I am Jordynn, a full-stack web developer. I am a woman of passion who thrives off of new knowledge and
-        seeks to be successful in all aspects of life. Due to my background in arts, fitness, and communications my
+        seeks to be successful in all aspects of life. Due to my background in arts, fitness, and communications, my
         talents and skills cover a myriad of categories; which marries front-end development eloquently. Exceling at
         front-end UI, meshing colors, themes, and design, I am confident in bringing a new, fresh perspective to
         application interface.
@@ -95,77 +95,105 @@
     <hr>
     <!-- projects -->
     <div class="row" id="projectcards">
-      <div class="col-6">
-        <div class="card" style="width: 100%">
-          <div class="zoom">
-            <a href="https://buley004.github.io/ballads-and-brews/">
-              <img class="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png" alt="Image of app">
-            </a>
+        <!-- <div class="col-6"> -->
+          <div class="card-group">
+            <div class="card">
+              <div class="zoom">
+                <a href="https://buley004.github.io/ballads-and-brews/">
+                  <img class="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png" alt="Image of app">
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Ballads and Brews</h5>
+                <p class="card-text">App populates concerts and restaurants near you NOW!</p>
+                <p class="card-text">Uses HTML, CSS, bootstrap, jQuery,
+                  and API documentation.</p>
+              </div>
+              <div class="card-footer">
+                <a href="https://github.com/buley004/ballads-and-brews" class="btn btn-primary" id="cardbutton">Github</a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="zoom">
+                <a href="#">
+                  <img class="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png" alt="Image of app"></a>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Divvy</h5>
+                <p class="card-text">Household bill splitting app.</p> 
+                <p class="card-text">Uses HTML, CSS, bootstrap, jQuery, sequelize/MSQL, and API
+                  documentation.</p>
+              </div>
+              <div class="card-footer">
+                <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="zoom">
+                <a href="#">
+                  <img class="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png" alt="Image of app"></a>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">THIS WILL BE ANOTHER PROJECT</h5>
+                <p class="card-text">...</p> 
+                <p class="card-text">...</p>
+              </div>
+              <div class="card-footer">
+                <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
+              </div>
+            </div>
           </div>
-          <div class="card-body">
-            <h5 class="card-title">Ballads and Brews</h5>
-            <p class="card-text">App populates concerts and restaurants near you NOW!</p>
-            <a href="https://github.com/buley004/ballads-and-brews" class="btn btn-primary" id="cardbutton">Github</a>
-          </div>
-        </div>
+        <!-- </div> -->
       </div>
-      <div class="col-6">
-        <div class="card" style="width: 100%">
-          <div class="zoom">
-            <img class="card-img-top" src="images/Screen Shot 2019-04-24 at 10.40.31 PM.png" alt="Image of app"></a>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Divvy</h5>
-            <p class="card-text">Household bill splitting app.</p>
-            <a href="https://github.com/jottobot/Divvy" class="btn btn-primary" id="cardbutton">Github</a>
-          </div>
-        </div>
-      </div>
-      <!-- end of project card row -->
     </div>
 
-    <!-- skills in cards -->
+    <!-- skills -->
     <h3 id="skills">
       Skills
     </h3>
 
     <center>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3"></div>
+        <div class="col-md-2">
           <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">HTML</p>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-2">
           <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">CSS</p>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-2">
           <i class='fas fa-dollar-sign' style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">jQuery</p>
         </div>
+        <div class="col-md-3"></div>
       </div>
 
-      <div class="row">
-        <div class="col-md-6">
+      <div class="row" id="skillsrow">
+          <div class="col-md-4"></div>
+        <div class="col-md-2">
           <i class='fas fa-stream' style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">mySQL</p>
         </div>
 
-        <div class="col-md-6">
+        
+        <div class="col-md-2">
           <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">Photoshop</p>
         </div>
+        <div class="col-md-4"></div>
       </div>
     </center>
-
-
     <!-- end of web portfolio div -->
   </div>
 
@@ -177,7 +205,7 @@
     <hr>
 
     <!-- photos -->
-    <div class="row">
+    <div class="row" id="photoone">
       <div class="col-6">
         <img src="images/Screen Shot 2019-06-11 at 9.44.16 PM.png" class="d-inline-block w-100"
           alt="Image of Jordynn's modeling.">
@@ -200,82 +228,84 @@
     </div>
 
     <!-- youtube videos -->
-    <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%" id="youtube">
+    <div class="youtube" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
         style="position:absolute; top:0; left: 0"></iframe>
     </div>
 
-    <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%" id="youtube">
+    <div class="youtube" style="padding-bottom:56.25%; position:relative; display:block; width: 100%" id="youtube">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/BRoeecMjRXY" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
         style="position:absolute; top:0; left: 0"></iframe>
     </div>
 
+  </div>
 
 
-    <!-- contact page -->
-    <div id="contactPage">
-      <h2 id="title">
-        Contact
-      </h2>
-      <hr>
 
-      <h5 class="contact">I would love to hear from you.</h4>
+  <!-- contact page -->
+  <div id="contactPage">
+    <h2 id="title">
+      Contact
+    </h2>
+    <hr>
 
-        <div class="row">
-          <div class="col-md-6">
-            <i class="fa fa-phone" style="font-size:48px" id="contacticon"></i>
-            <br>
-            <p class="contacttext">206-909-5153</p>
-          </div>
+    <h5 class="contact">I would love to hear from you.</h4>
 
-          <div class="col-md-6">
-            <i class="fa fa-envelope" style="font-size:48px" id="contacticon"></i>
-            <br>
-            <p class="contacttext">jordynn.otto@gmail.com</p>
-          </div>
+      <div class="row">
+        <div class="col-md-6">
+          <i class="fa fa-phone" style="font-size:48px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">206-909-5153</p>
         </div>
 
+        <div class="col-md-6">
+          <i class="fa fa-envelope" style="font-size:48px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">jordynn.otto@gmail.com</p>
+        </div>
+      </div>
 
-        <div class="row" id="row1">
-          <div class="col-md-4">
-            <i class='fab fa-linkedin' style="font-size:48px" id="contacticon"></i>
-            <br>
-            <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink">Linkedin</a>
-          </div>
 
-          <div class="col-md-4">
-            <i class='fab fa-github' style="font-size:48px" id="contacticon"></i>
-            <br>
-            <a href="https://github.com/jottobot" id="contactlink">Github</a>
-          </div>
-
-          <div class="col-md-4">
-            <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
-            <br>
-            <a href="assets/Jordynn Otto Resume.pdf" id="contactlink">Resume</a>
-          </div>
+      <div class="row" id="row1">
+        <div class="col-md-4">
+          <i class='fab fa-linkedin' style="font-size:48px" id="contacticon"></i>
+          <br>
+          <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink">Linkedin</a>
         </div>
 
-    </div>
+        <div class="col-md-4">
+          <i class='fab fa-github' style="font-size:48px" id="contacticon"></i>
+          <br>
+          <a href="https://github.com/jottobot" id="contactlink">Github</a>
+        </div>
 
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <div class="col-md-4">
+          <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
+          <br>
+          <a href="assets/Jordynn Otto Resume.pdf" id="contactlink">Resume</a>
+        </div>
+      </div>
 
-    <!-- javascript -->
-    <script src="assets/app.js"></script>
+  </div>
 
-    <!-- bootstrap js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <!-- container div -->
-    <!-- </div> -->
+  <!-- javascript -->
+  <script src="assets/app.js"></script>
+
+  <!-- bootstrap js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
+  <!-- container div -->
+  <!-- </div> -->
 
 </body>
 
