--- a/index.html
+++ b/index.html
@@ -250,16 +250,18 @@
     </div>
 
     <!-- youtube videos -->
-    <div class="youtube" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-        style="position:absolute; top:0; left: 0"></iframe>
-    </div>
+    <div class="youTube">
+      <div class="youtube" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
+        <iframe width="80%" height="80%" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+          style="position:absolute; top:0; left: 0"></iframe>
+      </div>
 
-    <div class="youtube" style="padding-bottom:56.25%; position:relative; display:block; width: 100%" id="youtube">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/BRoeecMjRXY" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-        style="position:absolute; top:0; left: 0"></iframe>
+      <div class="youtube" style="padding-bottom:56.25%; position:relative; display:block; width: 100%" id="youtube">
+        <iframe width="80%" height="80%" src="https://www.youtube.com/embed/BRoeecMjRXY" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+          style="position:absolute; top:0; left: 0"></iframe>
+      </div>
     </div>
 
   </div>
