--- a/index.html
+++ b/index.html
@@ -161,54 +161,56 @@
 
   <center>
     <div class="row" id="skillsrowone">
-      <div class="col-md-2"></div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-xs-0"></div>
+      <div class="col-md-2 col-xs-6">
         <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
         <br>
         <p class="contacttext">HTML</p>
       </div>
 
-      <div class="col-md-2">
+      <div class="col-md-2 col-xs-6">
         <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
         <br>
         <p class="contacttext">CSS</p>
       </div>
 
-      <div class="col-md-2">
+      <div class="col-md-2 col-xs-6">
+          <!-- <i class="fab fa-bootstrap"></i> -->
         <span class="glyphicon glyphicon-bold" style="font-size:50px" id="contacticon"></span>
         <br>
         <p class="contacttext">Bootstrap</p>
       </div>
 
-      <div class="col-md-2">
-        <i class='fas fa-dollar-sign' style="font-size:50px" id="contacticon"></i>
+      <div class="col-md-2 col-xs-6">
+          <!-- <i class="fab fa-js-square"></i> -->
+          <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
         <br>
         <p class="contacttext">Javascript</p>
       </div>
-      <div class="col-md-2"></div>
+      <div class="col-md-2 col-xs-0"></div>
     </div>
 
     <div class="row" id="skillsrow">
-      <div class="col-md-1"></div>
-      <div class="col-md-2">
+      <div class="col-md-1 col-xs-0"></div>
+      <div class="col-md-2 col-xs-6">
         <i class="fa fa-phone" style="font-size:50px" id="contacticon"></i>
         <br>
         <p class="contacttext">APIs</p>
       </div>
 
-      <div class="col-md-2">
+      <div class="col-md-2 col-xs-6">
         <i class='fas fa-database' style="font-size:50px" id="contacticon"></i>
         <br>
         <p class="contacttext">mySQL</p>
       </div>
 
-      <div class="col-md-2">
-        <i class="fas fa-hexagon" style="font-size:50px" id="contacticon"></i>
+      <div class="col-md-2 col-xs-6">
+        <i class="fab fa-node-js" style="font-size:60px" id="contacticon"></i>
         <br>
         <p class="contacttext">nodeJS</p>
       </div>
 
-      <div class="col-md-2">
+      <div class="col-md-2 col-xs-6">
         <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
         <br>
         <p class="contacttext">Photoshop</p>
@@ -278,36 +280,36 @@
     <h5 class="contact">I would love to hear from you.</h4>
 
       <div class="row" id="contactrowone">
-        <div class="col-2"></div>
-        <div class="col-md-4">
+        <div class="col-2 col-xs-0"></div>
+        <div class="col-md-4 col-xs-3">
           <i class="fa fa-phone" style="font-size:48px" id="contacticon"></i>
           <br>
           <p class="contacttext">206-909-5153</p>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-3">
           <i class="fa fa-envelope" style="font-size:48px" id="contacticon"></i>
           <br>
           <p class="contacttext">jordynn.otto@gmail.com</p>
         </div>
-        <div class="col-2"></div>
+        <div class="col-2 col-xs-0"></div>
       </div>
 
 
       <div class="row" id="row1">
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-3">
           <i class='fab fa-linkedin' style="font-size:48px" id="contacticon"></i>
           <br>
           <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink">Linkedin</a>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-3">
           <i class='fab fa-github' style="font-size:48px" id="contacticon"></i>
           <br>
           <a href="https://github.com/jottobot" id="contactlink">Github</a>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 col-xs-3">
           <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
           <br>
           <a href="assets/Jordynn Otto Resume.pdf" id="contactlink">Resume</a>
