--- a/index.html
+++ b/index.html
@@ -230,22 +230,22 @@
 
     <!-- photos -->
     <div class="row" id="photoone">
-      <div class="col-6">
+      <div class="col-md-6 col-xs-5">
         <img src="images/Screen Shot 2019-06-11 at 9.44.16 PM.png" class="d-inline-block w-100"
           alt="Image of Jordynn's modeling.">
       </div>
-      <div class="col-6">
+      <div class="col-md-6 col-xs-5">
         <img src="images/Screen Shot 2019-06-11 at 9.45.56 PM.png" class="d-inline-block w-100"
           alt="Image of Jordynn's modeling.">
       </div>
     </div>
 
     <div class="row">
-      <div class="col-6">
+      <div class="col-md-6 col-xs-5">
         <img src="images/Screen Shot 2019-06-11 at 9.47.15 PM.png" class="d-inline-block w-100"
           alt="Image of Jordynn's modeling.">
       </div>
-      <div class="col-6">
+      <div class="col-md-6 col-xs-5">
         <img src="images/Screen Shot 2019-06-11 at 9.46.37 PM.png" class="d-inline-block w-100"
           alt="Image of Jordynn's modeling.">
       </div>
