--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="phototwo">
       <div class="col-md-6 col-xs-5">
         <img src="images/Screen Shot 2019-06-11 at 9.47.15 PM.png" class="d-inline-block w-100"
           alt="Image of Jordynn's modeling.">
